src/components/pages/search/search.module.scss
.search {
  width: 100%;
  input {
    width: 100%;
    // set the default outer color to grey
    box-shadow: 0 0 0 2px $color-slate-700;
    &:focus,
    &:active {
      // ...and make it honey when focused
      box-shadow: 0 0 0 2px $color-honey-400;
    }
  }
}

.search-results {
  h2 {
    margin-bottom: 48px;
  }
}

.wrapper {
  @include row();
  @include col(4 6 10);
  margin: 0 auto;
}

