fix(search-page): position search bar behind header search results

--- a/src/components/pages/search/search.module.scss
+++ b/src/components/pages/search/search.module.scss
@@ -1,5 +1,7 @@
 .search {
   width: 100%;
+  // positioned behind the results from the header search bar
+  z-index: -1;
   input {
     width: 100%;
     // set the default outer color to grey
